change messages, update responsiveness, remove border radius
made messages shorter so they are easier to work with

fixed small content on mobile screens

removed border radius fromt the message divs,
will add the curves on separately

--- a/index.html
+++ b/index.html
@@ -21,17 +21,15 @@
         </div><br>
 
         <div id="message2" class="message">
-            <p>I'm daniel</p>
+            <p>I'm Daniel</p>
         </div><br>
 
         <div id="message3" class="message">
-            <p>I like to code and make cool things</p>
-            <p><a href='https://www.github.com/dbedggood'>github.com/dbedggood</a></p>
+            <p>I like to code and make cool things: <br><a href='https://www.github.com/dbedggood'>github.com/dbedggood</a></p>
         </div><br>
 
         <div id="message4" class="message">
-            <p>Currently I'm studying compsci at the university of auckland</p>
-            <p>and should be graduating sometime around mid 2019</p>
+            <p>Studying compsci at UoA, graduating mid 2019</p>
         </div><br>
 
         <div id="message5" class="message">
@@ -39,7 +37,7 @@
         </div><br>
 
         <div id="message6" class="message">
-            <p>You can contact me at <a href="mailto:ddbedggood@gmail.com?Subject=Hi%20Daniel">ddbedggood@gmail.com</a></p>
+            <p>You can contact me at: <br><a href="mailto:ddbedggood@gmail.com?Subject=Hi%20Daniel">ddbedggood@gmail.com</a></p>
         </div><br>
 
         <div id="message7" class="message">
