create typing bubble animation

--- a/index.html
+++ b/index.html
@@ -16,9 +16,17 @@
 
     <div class="messages">
 
-        <div id="message1" class="message top">
+        <div id="message1" class="message">
             <p>Hey 👋</p>
-        </div><br>
+        </div>
+        <div id="bubbles" class="message bubbles">
+            <p>
+                <span class="bubble"></span>
+                <span class="bubble"></span>
+                <span class="bubble"></span>
+            </p>
+        </div>
+        <br>
 
         <div id="message2" class="message">
             <p>I'm Daniel</p>
@@ -44,7 +52,7 @@
             <p>Excited to hear from you</p>
         </div><br>
 
-        <div id="message8" class="message bottom">
+        <div id="message8" class="message">
             <p>😁</p>
         </div><br>
 
