--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 </head>
 <body>
 
+    <div class="cvButton">
+        <button>
+            <a href="./cv.pdf" target="_blank">View My CV</a>
+        </button>
+    </div>
+
     <div class="messages">
         
         <div id="message1" class="message">
