Temp remove typing bubbles

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         <div id="message1" class="message">
             <p>Hey 👋</p>
         </div>
-        <div id="bubbles" class="message bubbles">
+        <!-- <div id="bubbles" class="message bubbles">
             <p>
                 <span class="bubble"></span>
                 <span class="bubble"></span>
                 <span class="bubble"></span>
             </p>
-        </div>
+        </div> -->
         <br>
 
         <div id="message2" class="message">
