Remove unused code

--- a/index.html
+++ b/index.html
@@ -24,15 +24,7 @@
         
         <div id="message1" class="message">
             <p>Hey 👋</p>
-        </div>
-        <!-- <div id="bubbles" class="message bubbles">
-            <p>
-                <span class="bubble"></span>
-                <span class="bubble"></span>
-                <span class="bubble"></span>
-            </p>
-        </div> -->
-        <br>
+        </div><br>
 
         <div id="message2" class="message">
             <p>I'm Daniel</p>
