CV Button pops up after the messages

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <div class="cvButton">
-        <button>
+        <button onclick="window.location.href = './cv.pdf';">
             <a href="./cv.pdf" target="_blank">View My CV</a>
         </button>
     </div>
