--- a/index.html
+++ b/index.html
@@ -1,60 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Daniel Bedggood</title>
 
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/icon" href="favicon.ico">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.js"></script>
-    <script src="script.js" type="module"></script>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>Daniel Bedggood</title>
+        <link rel="stylesheet" href="style.css" />
+        <link rel="icon" type="image/icon" href="favicon.ico" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.js"></script>
+        <script src="script.js" type="module"></script>
+    </head>
 
-</head>
-<body>
-
-    <div class="cvButton">
-        <button onclick="window.location.href = './cv.pdf';">
-            <a href="./cv.pdf" target="_blank">View My CV</a>
-        </button>
-    </div>
-
-    <div class="messages">
+    <body>
         
-        <div id="message1" class="message">
-            <p>Hey 👋</p>
-        </div><br>
+        <div class="messages">
+            <div id="message1" class="message">
+                <p>Hey 👋</p>
+            </div>
+            <br />
 
-        <div id="message2" class="message">
-            <p>I'm Daniel</p>
-        </div><br>
+            <div id="message2" class="message">
+                <p>I'm Daniel</p>
+            </div>
+            <br />
 
-        <div id="message3" class="message">
-            <p>I like to code and make cool things: <br><a href='https://www.github.com/dbedggood'>github.com/dbedggood</a></p>
-        </div><br>
+            <div id="message3" class="message">
+                <p>
+                    I like to code and make cool things: <br /><a
+                        href="https://www.github.com/dbedggood"
+                        >github.com/dbedggood</a
+                    >
+                </p>
+            </div>
+            <br />
 
-        <div id="message4" class="message">
-            <p>Studying compsci at UoA, graduating mid 2019</p>
-        </div><br>
+            <div id="message4" class="message">
+                <p>Studying compsci at UoA, graduating mid 2019</p>
+            </div>
+            <br />
 
-        <div id="message5" class="message">
-            <p>I'm available for work!</p>
-        </div><br>
+            <div id="message5" class="message">
+                <p>I'm available for work!</p>
+            </div>
+            <br />
 
-        <div id="message6" class="message">
-            <p>You can contact me at: <br><a href="mailto:ddbedggood@gmail.com?Subject=Hi%20Daniel">ddbedggood@gmail.com</a></p>
-        </div><br>
+            <div id="message6" class="message">
+                <p>
+                    You can contact me at: <br /><a
+                        href="mailto:ddbedggood@gmail.com?Subject=Hi%20Daniel"
+                        >ddbedggood@gmail.com</a
+                    >
+                </p>
+            </div>
+            <br />
 
-        <div id="message7" class="message">
-            <p>Excited to hear from you</p>
-        </div><br>
+            <div id="message7" class="message">
+                <p>Excited to hear from you</p>
+            </div>
+            <br />
 
-        <div id="message8" class="message">
-            <p>😁</p>
-        </div><br>
+            <div id="message8" class="message">
+                <p>😁</p>
+            </div>
+            <br />
+        </div>
 
-    </div>
+    </body>
 
-</body>
 </html>
