--- a/index.html
+++ b/index.html
@@ -1,71 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Daniel Bedggood</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/icon" href="favicon.ico" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.js"></script>
+    <script src="script.js" type="module"></script>
+  </head>
 
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>Daniel Bedggood</title>
-        <link rel="stylesheet" href="style.css" />
-        <link rel="icon" type="image/icon" href="favicon.ico" />
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.js"></script>
-        <script src="script.js" type="module"></script>
-    </head>
+  <body>
+    <div class="messages">
+      <div id="message1" class="message">
+        <p>Hey 👋</p>
+      </div>
+      <br />
 
-    <body>
-        
-        <div class="messages">
-            <div id="message1" class="message">
-                <p>Hey 👋</p>
-            </div>
-            <br />
+      <div id="message2" class="message">
+        <p>I'm Daniel</p>
+      </div>
+      <br />
 
-            <div id="message2" class="message">
-                <p>I'm Daniel</p>
-            </div>
-            <br />
+      <div id="message3" class="message">
+        <p>
+          I'm constantly upskilling and making cool things:
+          <a href="https://www.github.com/dbedggood">github.com/dbedggood</a>
+        </p>
+      </div>
+      <br />
 
-            <div id="message3" class="message">
-                <p>
-                    I like to code and make cool things: <br /><a
-                        href="https://www.github.com/dbedggood"
-                        >github.com/dbedggood</a
-                    >
-                </p>
-            </div>
-            <br />
+      <div id="message4" class="message">
+        <p>
+          I have just graduated from the University of Auckland, studied
+          computer science
+        </p>
+      </div>
+      <br />
 
-            <div id="message4" class="message">
-                <p>Studying compsci at UoA, graduating mid 2019</p>
-            </div>
-            <br />
+      <div id="message5" class="message">
+        <p>Now I'm available for work!</p>
+      </div>
+      <br />
 
-            <div id="message5" class="message">
-                <p>I'm available for work!</p>
-            </div>
-            <br />
+      <div id="message6" class="message">
+        <p>
+          You can contact me at: <br /><a
+            href="mailto:ddbedggood@gmail.com?Subject=Hi%20Daniel"
+            >ddbedggood@gmail.com</a
+          >
+        </p>
+      </div>
+      <br />
 
-            <div id="message6" class="message">
-                <p>
-                    You can contact me at: <br /><a
-                        href="mailto:ddbedggood@gmail.com?Subject=Hi%20Daniel"
-                        >ddbedggood@gmail.com</a
-                    >
-                </p>
-            </div>
-            <br />
+      <div id="message7" class="message">
+        <p>Excited to hear from you</p>
+      </div>
+      <br />
 
-            <div id="message7" class="message">
-                <p>Excited to hear from you</p>
-            </div>
-            <br />
-
-            <div id="message8" class="message">
-                <p>😁</p>
-            </div>
-            <br />
-        </div>
-
-    </body>
-
+      <div id="message8" class="message">
+        <p>😁</p>
+      </div>
+      <br />
+    </div>
+  </body>
 </html>
